# correct-3d-pointcloud-delta-reality

./: .gitignore  Computer vision assignment.docx  README.md  instructions_from_email_hr.txt  pyproject.toml
scripts/: decompile.py  diagnose.py  inspect_dll.py  score_viewer.py
src/coordinate_converter/: __init__.py  cli.py  convert.py  ply.py  search.py  trajectory.py  transform.py  types.py
