[project]
name = "coordinate-converter"
version = "0.1.0"
description = "Convert point clouds and camera trajectory to the viewer coordinate system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
]

[project.scripts]
coordinate-converter = "coordinate_converter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coordinate_converter"]
